examples/good/07-01-functions-reference-pass.dog
void fun(int& byRef) {
    byRef++;
    return;
}

int x = 15;
yeet(x); // 15
fun(x);
yeet(x); // 16