examples/bad/13-02-functions-redeclaration.dog
int fun() {
    return 5;
}

void fun() {
    return;
}